[tool.poetry]
name = "Space Invader"
version = "0.1.0"
description = "The classic space invader game"
authors = ["Abhishek Kashyap <abhik5567@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
